# ent413_ros2_ws

./: .gitignore  .gitmodules  README.md
src/lab_basics/: package.xml  setup.cfg  setup.py
src/lab_basics/lab_basics/: greeting_client.py  greeting_service.py  simple_listener.py  simple_talker.py
src/welding_robot_application/: README.md  package.xml  setup.cfg  setup.py
src/welding_robot_application/config/: frames.yaml
src/welding_robot_application/launch/: application_demo.launch.py  fake_camera_demo.launch.py  frame_manager.launch.py  path_visualizer.launch.py  toolpath_executor.launch.py
src/welding_robot_application/paths/: beam_bottom_outer_left.csv  beam_bottom_outer_right.csv  beam_top_outer_left.csv  beam_top_outer_right.csv
src/welding_robot_application/resource/: welding_robot_application
src/welding_robot_application/welding_robot_application/: fake_camera_publisher.py  frame_manager.py  path_visualizer.py  toolpath_executor.py
src/welding_robot_bringup/: CMakeLists.txt  README.md  package.xml
src/welding_robot_bringup/config/: gazebo_gui.config  gazebo_ros2_controllers.yaml
src/welding_robot_bringup/launch/: gazebo_camera_demo.launch.py  gazebo_control_demo.launch.py  gazebo_control_headless.launch.py
src/welding_robot_bringup/urdf/: welding_robot_gazebo.xacro  welding_robot_gazebo_control.xacro
src/welding_robot_bringup/worlds/: welding_camera_demo.sdf
src/welding_robot_description/: CMakeLists.txt  package.xml
src/welding_robot_description/launch/: display.launch.py  rviz.rviz
src/welding_robot_description/meshes/collision/: beam.stl  welding_table.stl
src/welding_robot_description/meshes/visual/: pedestal.stl  torch.stl
src/welding_robot_description/urdf/: welding_robot.xacro  welding_robot_macro.xacro
src/welding_robot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/welding_robot_moveit_config/config/: chomp_planning.yaml  initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  welding_robot.srdf  welding_robot.urdf.xacro
src/welding_robot_moveit_config/launch/: demo.launch.py  moveit.rviz  moveit_empty.rviz  moveit_rviz.launch.py
src/welding_robot_moveit_gazebo_config/: CMakeLists.txt  README.md  package.xml
src/welding_robot_moveit_gazebo_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  welding_robot.srdf  welding_robot.urdf.xacro
src/welding_robot_moveit_gazebo_config/launch/: demo.launch.py  headless_demo.launch.py  moveit_gazebo.launch.py
