<?xml version="1.0"?>
<package format="3">
  <name>welding_robot_application</name>
  <version>0.0.1</version>
  <description>Application package for teaching CSV-based welding paths and industrial-style base-frame publication.</description>

  <maintainer email="anilkir@example.com">anilkir</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
