<?xml version="1.0"?>
<package format="3">
  <name>welding_robot_moveit_config</name>
  <version>0.1.0</version>
  <description>
    <p>
      MoveIt configuration package for the welding robot built around a Franka FR3 arm.
    </p>
    <p>
      This package was created manually from a Panda template because MoveIt Setup Assistant could not be used.
    </p>
  </description>
  <author email="anil@example.com">Anil</author>
  <maintainer email="anil@example.com">Anil</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>welding_robot_description</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <!-- disabled to remove circular dependencies
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  -->
  <exec_depend>ros2cli_common_extensions</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
